--- a/ui.frontend/src/main/webpack/components/tocnavigation/scss/styles/_default.scss
+++ b/ui.frontend/src/main/webpack/components/tocnavigation/scss/styles/_default.scss
@@ -1,4 +1,6 @@
 #toc-navigation {
+    margin-top: 32px;
+
     @media (max-width: $screen-small) {
         display: none;
     }
